change all components to onpush with signal inputs

--- a/frontend/src/app/components/create-poster/artist-selector/artist-selector.component.html
+++ b/frontend/src/app/components/create-poster/artist-selector/artist-selector.component.html
@@ -80,8 +80,8 @@
     }
 
     @if (
-      parentForm.get('artistIds')?.touched &&
-      parentForm.get('artistIds')?.invalid
+      parentForm().get('artistIds')?.touched &&
+      parentForm().get('artistIds')?.invalid
     ) {
       <div class="invalid-feedback d-block">
         Please select at least one artist
