--- a/frontend/src/app/components/profile/profile-header/profile-header.component.html
+++ b/frontend/src/app/components/profile/profile-header/profile-header.component.html
@@ -8,7 +8,7 @@
     <div
       class="rounded-circle border border-4 border-white shadow-sm bg-primary text-white d-flex align-items-center justify-content-center"
       style="width: 96px; height: 96px; font-size: 2rem">
-      {{ getInitials(user.name) }}
+      {{ getInitials(user().name) }}
     </div>
   </div>
 
@@ -16,11 +16,11 @@
     <!-- Name Section -->
     <div class="mb-4 d-flex flex-column align-items-center">
       <h1 class="fs-4 fw-medium">
-        {{ user.name || 'Anonymous User' }}
+        {{ user().name || 'Anonymous User' }}
       </h1>
-      <p class="fs-6 text-dark fw-medium">{{ user.email }}</p>
+      <p class="fs-6 text-dark fw-medium">{{ user().email }}</p>
 
-      @if (user.isAdmin) {
+      @if (user().isAdmin) {
         <div
           class="mt-2 px-3 py-1 badge rounded-pill text-uppercase bg-primary">
           ADMIN
@@ -32,11 +32,11 @@
     <div class="d-flex flex-column align-items-center gap-2 mb-4">
       <div class="d-flex align-items-center gap-2 text-dark fw-medium">
         <i class="bi bi-envelope"></i>
-        <span>{{ user.email }}</span>
+        <span>{{ user().email }}</span>
       </div>
       <div class="d-flex align-items-center gap-2 text-dark fw-medium">
         <i class="bi bi-calendar"></i>
-        <span>Member since {{ user.createdAt | date }}</span>
+        <span>Member since {{ user().createdAt | date }}</span>
       </div>
     </div>
   </div>
