more cleanup in the profile component

--- a/frontend/src/app/components/address-autocomplete/address-autocomplete.component.html
+++ b/frontend/src/app/components/address-autocomplete/address-autocomplete.component.html
@@ -5,7 +5,7 @@
       #addressInput
       type="text"
       [formControl]="addressControl"
-      [placeholder]="placeholder"
+      [placeholder]="placeholder()"
       class="address-input"
       (keydown.enter)="handleEnterKey($event)" />
     <div class="input-actions">
